<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Students Catalog</string>
    <string name="title">Students Catalog</string>
    <string name="roll_no">Roll Number:</string>
    <string name="name">Enter Name:</string>
    <string name="marks">Enter Marks:</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="view">View</string>
    <string name="view_all">View All</string>
    <string name="show_info">Show Information</string>

</resources>
